Wed Mar  9 00:07:03 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/logger.rb (Logger::LogDevice#initialize): define using
	  keyword arguments.

Tue Mar  8 23:37:07 2016  Charles Oliver Nutter  <headius@headius.com>

	* test/ruby/test_array.rb: split out the test for no stack error
	  on large input for test_permutation, test_repeated_permutation,
	  and test_repeated_combination, and make them all timeout:30.

Tue Mar  8 17:20:21 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* intern.h (rb_divmod): assume compilers `/` and `%` comply C99
	  and reduce branching. If a compiler doesn't comply, add #ifdefs.

	* intern.h (rb_div): added for Ruby's behavior.

	* intern.h (rb_mod): added for Ruby's behavior.

	* insns.def (opt_div): use rb_div.

	* insns.def (opt_mod): use rb_mod.

	* numeric.c (fixdivmod): removed.

	* numeric.c (fix_divide): use rb_div.

	* numeric.c (fix_mod): use rb_mod.

	* numeric.c (fix_divmod): use rb_divmod.

Tue Mar  8 17:53:09 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* insns.def (opt_mod): show its method name on ZeroDivisionError.
	  [Bug #12158]

Tue Mar  8 17:33:38 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_write_console): now no need to check
	  ERROR_CALL_NOT_IMPLEMENTED because it is for old Win9X.

Tue Mar  8 16:54:29 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_write_console): stop the VT100 emulation if the
	  console supports it natively.

Tue Mar  8 08:13:01 2016  Rei Odaira  <Rei.Odaira@gmail.com>

	* test/net/imap/test_imap.rb (test_idle_timeout): Because of the
	  timeout specified in "imap.idle(0.2)", there is no gurantee that
	  the server thread has done all the work before the client thread
	  performs the assertions. It depends on the thread scheduling.
	  Add checks to avoid false positives (on AIX, particularly).

Tue Mar  8 00:42:22 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ruby.c (warn_cr_in_shebang): meaningless check on DOSISH platforms.